--- a/app/views/urls/_form.html.erb
+++ b/app/views/urls/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit :Update, class: "btn btn-primary" %>
   </div>
 <% end %>
